--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "react-transition-group": "^2.5.0",
+    "reactstrap": "^6.5.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,5 +27,4 @@
     "not ie <= 11",
     "not op_mini all"
   ]
-  
 }
